--- a/www/src/App.css
+++ b/www/src/App.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
+
 :root {
   --primaryBlue: rgba(38 93 198, 1);
   --primaryBlueSplitted: 38, 93, 198;
+  --primaryDark: #15262d;
 }
 
 #tsparticles {
@@ -14,37 +17,6 @@
   background: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.noScrollBar::-webkit-scrollbar {
+  display: none;
 }
